2005-02-13 11:35 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridOptimizeUVForVolume) added face UV area check
	to prevent face area from dropping below 1.0e-12 while trying yo
	improve cell volume. It will continue to smooth below this area if
	area is increasing.
	* src/gridcad.c (gridSmartVolumeLaplacian) fixed an old copy and
	paste bug. Now it uses the correct gridNodeVolume cost instead of
	the copyied gridNodeAR.
	* src/gridcad.c (gridSmoothNodeVolumeSimplex) decreased its
	convergence tolerence to 1.0e-10 from 1.0e-8.
	
2005-02-12 11:56 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelRelaxNegativeFaceAreaUV) added checks
	to make sure that only allow boundary nodes can be selected to fix
	negative face areas with gridSmoothNodeFaceAreaUV. Increased the
	face area seletion from smaller than 0.0 to smaller then 1.0e-14.
	* src/gridcad.c (gridSmoothNodeFaceAreaUV) return immediately with
	NULL if it was not called with a boundary node.
	* src/gridcad.c (gridSmoothNodeFaceAreaUVSimplex) return
	immediately with NULL if the it was called for a node that it
	cannot handle. Return NULL if it cannot find a valid face
	associated with this node.

2005-02-12 10:19 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridNodeProjectionDisplacement) cleaned up how
	the displacements for the evaluated/projected surface are
	calculated. Made sure that all the CAD parameters are also
	updated.

2005-02-08 00:18 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLinearProgramUV) verify positive face areas
	in parameter space before evaluating CAD parameters. This should
	fix two issues: prevent surface `cliffs' while smoothing and
	evaluating parameters that are outside of the face, which causing
	CAD warnings.

2005-02-10 00:08 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell) refactored the parallel
	ghost node checks to make sure that faces will be present for